[project]
name = "lab-data-integrations-interface"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "atproto>=0.0.65",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "pydantic>=2.13.3",
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "typer>=0.25.1",
    "websockets>=15.0.1",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "rich>=15.0.0",
    "tenacity>=9.0.0",
    "spacy>=3.7.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "praw>=7.7.0",
]

[project.optional-dependencies]
testing = [
    "faker>=37.0.0",
    "pytest>=8.0.0",
]
db-experiments = [
    "duckdb>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "psutil>=6.0.0",
    "faker>=37.0.0",
]

[dependency-groups]
dev = [
    "complexipy>=5.1.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.400",
    "ruff>=0.9.0",
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
exclude = ["tests", "experiments"]
