[project]
name = "lab-data-integrations-interface"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "atproto>=0.0.68",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "pydantic>=2.13.3",
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "typer>=0.25.1",
    "websockets>=15.0.1",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "rich>=15.0.0",
    "tenacity>=9.0.0",
    "spacy>=3.7.0",
    "pandas>=2.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=14.0.0",
    "praw>=7.7.0",
    "prefect>=3.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "opik>=1.0.0",
    "langdetect>=1.0.9",
    "tweepy>=4.14.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
testing = [
    "faker>=37.0.0",
    "pytest>=8.0.0",
]
db-experiments = [
    "duckdb>=1.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "psutil>=6.0.0",
    "faker>=37.0.0",
    "boto3>=1.35.0",
]
preprocessing = [
    "langdetect>=1.0.9",
]

[dependency-groups]
dev = [
    "complexipy>=5.1.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.400",
    "ruff>=0.9.0",
    "vulture>=2.16",
]

[tool.uv]
exclude-newer = "7 days"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    # Legacy Python 3.10 compat shim inside opentelemetry-api (transitive dep via
    # prefect/pydocket) hits a deprecated code path even on 3.11. Not our code.
    "ignore:SelectableGroups dict interface is deprecated. Use select.:DeprecationWarning:opentelemetry.util._importlib_metadata",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
exclude = ["tests", "experiments"]

[tool.vulture]
exclude = ["*venv*"]
min_confidence = 80
paths = ["."]
